# ESH_roadmap_basic

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS.txt
base-nucleoc031c6-board-mx-project/: CMakeLists.txt  STM32C031XX_FLASH.ld  base-nucleoc031c6-board-mx-project.ioc
base-nucleoc031c6-board-mx-project/cmake/: starm-clang.cmake
basic-00-cstruct/: CMakeLists.txt
basic-00-cstruct-stm32c0/: .cproject  .project  basic-00-cstruct-stm32c0.launch
basic-00-cstruct-stm32c0/Debug/: basic-00-cstruct-stm32c0.elf  basic-00-cstruct-stm32c0.list  basic-00-cstruct-stm32c0.map  makefile
basic-00-cstruct-stm32c0/Src/: main.c
basic-00-cstruct/Src/: main.c  startup_stm32c031xx.S
basic-01-headers/: CMakeLists.txt  stm32c031x6_flash.ld
basic-01-headers/Src/: main.c
basic-02-gpio/: CMakeLists.txt
basic-02-gpio/Src/: gpio.c  main.c
basic-03-uart/: CMakeLists.txt
basic-03-uart/Inc/: uart.h
basic-03-uart/Src/: main.c  uart.c
basic-04-adc/: CMakeLists.txt
basic-04-adc/Inc/: adc.h
basic-04-adc/Src/: adc.c  main.c
basic-05-systick/: CMakeLists.txt  CMakePresets.json
basic-05-systick/Inc/: gpio.h  systick.h
basic-05-systick/Src/: gpio.c  main.c
basic-05-systick/cmake/stm32cubemx/: CMakeLists.txt
basic-06-gp-timers/: CMakeLists.txt
basic-06-gp-timers/Inc/: gpio.h  timer.h
basic-06-gp-timers/Src/: gpio.c  main.c  timer.c
basic-07-interrupts/: CMakeLists.txt
basic-07-interrupts/Inc/: gpio.h  timer.h
basic-07-interrupts/Src/: gpio.c  main.c  systick.c  timer.c  uart.c
basic-07-interrupts/cmake/: vscode_generated.cmake
(+6 files in other folders)
